Fix demo widgets for steam/itch/gamejolt

--- a/assets/product.html
+++ b/assets/product.html
@@ -30,7 +30,7 @@
             </article>
           </section>
 
-          {{>mailchimp}}
+          {{>mailing_list}}
           {{>assets}}
           {{>widgets}}
           {{>recognition}}
